--- a/production/index.html
+++ b/production/index.html
@@ -137,7 +137,7 @@
                 <div class="container g-text-center--xs g-ver-center--xs">
                     <div class="g-margin-b-30--xs">
                         <div class="g-margin-b-30--xs">
-                            <h2 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">Revolusi IT<br>untuk Pendidikan <br>di Era Revolusi Industri 4.0</h2>
+                            <h2 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">Inovasi IT<br>untuk Pendidikan <br>di Era Revolusi Industri 4.0</h2>
                         </div>
                         <!--<a class="js__popup__youtube" href="https://www.youtube.com/watch?v=lcFYdgZKZxY" title="Intro Video">
                                 <i class="s-icon s-icon--lg s-icon--white-bg g-radius--circle ti-control-play"></i>
@@ -291,8 +291,9 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-md-offset-1">
-                    <p class="g-font-size-18--xs">Rangkaian beberapa kegiatan yang terdiri dari lomba, workshop, seminar dan expo.</p>
-                    <p class="g-font-size-18--xs">“Inovasi IT untuk Pendidikan di Era Revolusi Industri 4.0” adalah tema yang akan kami angkat untuk IT Expo tahun ini.</p>
+                    <p class="g-font-size-18--xs">Sejak tahun 2016, IT Fest mulai diadakan secara berkala tiap tahun oleh BEMP Pendidikan Informatika. IT Fest terinspirasi dari kegiatan HMJ (Himpunan Mahasiswa Jurusan) Elektro yang bernama emofest yang kini telah dipecah menjadi 3
+                        organisasi (BEMPVT Elektro, BEMP Elektronika, BEMP PTIK).</p>
+                    <p class="g-font-size-18--xs">Sebelumnya, IT Fest memiliki 2 rangkaian acara yaitu Seminar dan Lomba Akademik. Namun, sejak tahun 2018, IT Fest resmi berganti menjadi IT Expo. Pada IT Expo UNJ 2018 memiliki 4 rangkaian acara yaitu Seminar, Expo, Lomba, dan Workshop.</p>
                     <a href="about.html" class="g-font-size-18--xs">Selengkapnya..</a>
                 </div>
             </div>
@@ -334,7 +335,7 @@
                         </div>
                         <div class="g-padding-x-20--xs">
                             <h3 class="g-font-size-18--xs g-color--white">Pendaftaran Lomba</h3>
-                            <p class="g-color--white-opacity">19 september 2018 - 26 oktober 2018</p>
+                            <p class="g-color--white-opacity">19 September 2018 - 26 Oktober 2018</p>
                         </div>
                     </div>
                 </li>
@@ -348,7 +349,7 @@
                         </div>
                         <div class="g-padding-x-20--xs">
                             <h3 class="g-font-size-18--xs g-color--white">Workshop</h3>
-                            <p class="g-color--white-opacity">13 oktober 2018 - 21 oktober 2018</p>
+                            <p class="g-color--white-opacity">13 Oktober 2018 - 21 Oktober 2018</p>
                         </div>
                     </div>
                 </li>
@@ -361,8 +362,8 @@
                             <span class="g-display-inline-block--xs g-width-100--xs g-height-100--xs g-font-size-38--xs g-color--primary g-bg-color--white g-box-shadow__dark-lightest-v4 g-padding-x-20--xs g-padding-y-20--xs g-radius--circle">03</span>
                         </div>
                         <div class="g-padding-x-20--xs">
-                            <h3 class="g-font-size-18--xs g-color--white">Seminar</h3>
-                            <p class="g-color--white-opacity">29 november 2018</p>
+                            <h3 class="g-font-size-18--xs g-color--white">Kompetisi</h3>
+                            <p class="g-color--white-opacity">27 Oktober 2018 - 28 November 2018</p>
                         </div>
                     </div>
                 </li>
@@ -375,8 +376,8 @@
                             <span class="g-display-inline-block--xs g-width-100--xs g-height-100--xs g-font-size-38--xs g-color--primary g-bg-color--white g-box-shadow__dark-lightest-v4 g-padding-x-20--xs g-padding-y-20--xs g-radius--circle">04</span>
                         </div>
                         <div class="g-padding-x-20--xs">
-                            <h3 class="g-font-size-18--xs g-color--white">EXPO</h3>
-                            <p class="g-color--white-opacity">29 november 2018</p>
+                            <h3 class="g-font-size-18--xs g-color--white">Seminar &amp; EXPO</h3>
+                            <p class="g-color--white-opacity">29 November 2018</p>
                         </div>
                     </div>
                 </li>
@@ -388,7 +389,7 @@
 
     <!--========== PAGE CONTENT ==========-->
     <!-- About -->
-    <div class="container g-padding-y-80--xs g-padding-y-125--sm">
+    <div class="container g-padding-y-80--xs g-padding-y-125--sm hide">
 
         <div class="g-text-center--xs g-margin-b-100--xs">
             <h3 class="text-uppercase g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Pembicara</h3>
@@ -434,10 +435,45 @@
 
     <!-- Clients -->
     <div class="g-bg-color--sky-light">
-        <div class="g-container--sm">
-            <div class="g-text-center--xs g-margin-b-80--xs">
-                <h2 class="g-font-size-32--xs g-font-size-36--sm">Sponsor</h2>
-                <p class="g-font-size-18--md">sponsorship.itexpo@gmail.com</p>
+        <div class="g-padding-y-80--xs g-padding-y-125--sm">
+            <div class="g-container--sm">
+                <div class="g-text-center--xs g-margin-b-80--xs">
+                    <h2 class="g-font-size-32--xs g-font-size-36--sm">Sponsor</h2>
+                    <p class="g-font-size-18--md">sponsorship.itexpo@gmail.com</p>
+                </div>
+            </div>
+            <div class="g-container--md hide">
+                <!-- Swiper Clients -->
+                <div class="s-swiper js__swiper-clients">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                <img class="s-clients-v1" src="img/clients/01-dark.png" alt="Clients Logo">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".2s">
+                                <img class="s-clients-v1" src="img/clients/02-dark.png" alt="Clients Logo">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".3s">
+                                <img class="s-clients-v1" src="img/clients/03-dark.png" alt="Clients Logo">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".4s">
+                                <img class="s-clients-v1" src="img/clients/04-dark.png" alt="Clients Logo">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".5s">
+                                <img class="s-clients-v1" src="img/clients/05-dark.png" alt="Clients Logo">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Swiper Clients -->
             </div>
         </div>
     </div>
